# Xernel

./: .gitignore  AGENTS.md  XOS.txt
Xernel/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
Xernel/.cargo/: config.toml
Xernel/boot/: README.md  limine.cfg
Xernel/docs/history/0.20_Netzwerk/: 0.20.4_Netzwerk_Service.txt
Xernel/drivers/virtio/: Cargo.toml
Xernel/drivers/virtio/src/: main.rs
Xernel/kernel/: Cargo.toml  linker-x86_64.ld
Xernel/kernel/src/: cap.rs  demo.rs  elf.rs  endpoint.rs  ipc.rs  main.rs  mm.rs  notification.rs  panic.rs  process.rs  sched.rs  serial.rs  syscall.rs  user.rs
Xernel/kernel/src/arch/: mod.rs
Xernel/kernel/src/arch/aarch64/: mod.rs
Xernel/kernel/src/arch/riscv64/: mod.rs
Xernel/kernel/src/arch/x86_64/: apic.rs  context.rs  cpu.rs  framebuffer.rs  gdt.rs  idt.rs  keyboard.rs  mod.rs  paging.rs  pci.rs  qemu.rs  serial.rs  syscall.rs  vspace.rs
Xernel/kernel/src/mm/: frame.rs  paging.rs
Xernel/libs/xabi/: Cargo.toml
Xernel/libs/xabi/src/: cap.rs  errno.rs  lib.rs  syscall.rs
Xernel/libs/xdriver/: Cargo.toml
Xernel/libs/xdriver/src/: lib.rs
Xernel/libs/xlibc/: Cargo.toml
Xernel/libs/xlibc/src/: lib.rs
Xernel/libs/xstd/: Cargo.toml
Xernel/libs/xstd/src/: lib.rs
Xernel/servers/disp/: Cargo.toml
Xernel/servers/disp/src/: main.rs
Xernel/servers/netstack/: Cargo.toml
Xernel/servers/netstack/src/: main.rs
Xernel/servers/pm/: Cargo.toml
Xernel/servers/pm/src/: main.rs
Xernel/servers/rootserver/: Cargo.toml
Xernel/servers/rootserver/src/: main.rs
Xernel/servers/vfs/: Cargo.toml
Xernel/servers/vfs/src/: main.rs
Xernel/targets/: x86_64-xernel-user.json  x86_64-xernel.json
Xernel/tests/: README.md
Xernel/userland/init/: Cargo.toml  linker.ld
Xernel/userland/init/src/: main.rs
Xernel/userland/xsh/: Cargo.toml
Xernel/userland/xsh/src/: main.rs
Xernel/xtask/: Cargo.toml
Xernel/xtask/src/: main.rs
docs/: README.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  intro.md  layout.md  phase-0.md  status.md  syscalls.md  vision.md
docs/design/: 0001-architecture-decisions.md  README.md
docs/history/0.0_Recherche/: 0.0.1_Gemini.txt
docs/history/0.10_Framebuffer/: 0.10.0_Framebuffer.txt
docs/history/0.11_Multiprocessing/: 0.11.0_Adressraum_Isolation.txt
docs/history/0.12_Multitasking/: 0.12.0_KooperativesScheduling.txt
docs/history/0.13_Preemption/: 0.13.0_PreemptivesScheduling.txt
docs/history/0.14_TreiberFramework/: 0.14.0_PCI_Discovery.txt  0.14.1_Bugfix_Framebuffer_perAS_und_SingleInit.txt  0.14.2_MMIO_Mapping.txt  0.14.3_DMA_Puffer.txt  0.14.4_virtio_IO_und_Kapazitaet.txt  0.14.5_virtio_Sektor_lesen.txt
docs/history/0.15_Capabilities/: 0.15.0_IoPort_Capability.txt  0.15.1_IoMem_Capability.txt  0.15.2_Untyped_Budget.txt  0.15.3_Capabilities_sichtbar.txt
docs/history/0.16_Dateisystem/: 0.16.0_Block_Layer_RW.txt  0.16.1_XernelFS.txt
docs/history/0.17_IPC_Delegation/: 0.17.0_Endpoint_IPC.txt  0.17.1_Capability_Delegation.txt
docs/history/0.18_Spawn/: 0.18.0_Spawn_Prozesse_zur_Laufzeit.txt
docs/history/0.19_Datei_Service/: 0.19.0_Datei_Service_als_eigener_Prozess.txt
docs/history/0.1_KernelPlanen/: 0.1.2_Xernel_Konzept_v0.1.md
docs/history/0.20_Netzwerk/: 0.20.0_virtio_net_erstes_Paket.txt  0.20.1_IPv4_ICMP_ping.txt  0.20.2_UDP_DHCP.txt  0.20.3_TCP_Handshake_Echo.txt
docs/history/0.21_Readiness/: 0.21.0_Notification_Readiness.txt
docs/history/0.22_GeteilterSpeicher/: 0.22.0_SharedMemory_Frame_Delegation.txt
docs/history/0.23_WaitQueues/: 0.23.0_Echtes_Blockieren.txt
docs/history/0.2_AnfangDesCodens/: 0.2.2_Tree.txt
docs/history/0.3_KernelFundament/: 0.3.0_Uebersicht.txt  0.3.1_Phase0_Boot.txt  0.3.2_Phase1_SpeicherUndInterrupts.txt  0.3.3_Meilenstein2_SchedulerUndIPC.txt  0.3.4_Tree.txt
docs/history/0.4_RingDreiUndSyscalls/: 0.4.0_Uebersicht.txt  0.4.1_Capabilities.txt  0.4.2_SyscallEntry.txt  0.4.3_RingDrei_ErsterUserProzess.txt  0.4.4_Tree.txt  0.4.5_WarnungenAufgeraeumt.txt
docs/history/0.5_EchteProgramme/: 0.5.0_Uebersicht.txt  0.5.1_InitProgramm.txt  0.5.2_ElfLoaderUndModul.txt  0.5.3_Tree.txt
docs/history/0.6_ErstesOS/: 0.6.0_Uebersicht.txt  0.6.1_SyscallABI.txt  0.6.2_DemoOS_und_Stack.txt
docs/history/0.7_TastaturInput/: 0.7.0_Uebersicht.txt  0.7.1_PS2_Keyboard_und_SysRead.txt
docs/history/0.8_XOS_Feedback/: 0.8.0_Uebersicht.txt  0.8.1_SSE_und_NonBlockingRead.txt  0.8.2_xtask_init_override.txt  0.8.3_XOS_BootProtokoll.txt  0.8.4_ElfLoader_GeteiltePages.txt
docs/history/0.9_UserHeap/: 0.9.0_SYS_SBRK.txt  0.9.1_StackAlignment_Fix.txt
