[package]
name = "xlibc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Xernel POSIX compatibility layer (own implementation, not Linux-derived)"

[lib]
path = "src/lib.rs"

[dependencies]
xabi = { path = "../xabi" }
xstd = { path = "../xstd" }
